--- a/Website/Website/wwwroot/css/MyStyles.css
+++ b/Website/Website/wwwroot/css/MyStyles.css
@@ -14,4 +14,8 @@
     background: rgb(2,0,36);
     background: linear-gradient(0deg, rgba(2,0,36,1) 0%, rgba(0,0,0,1) 49.9%, rgba(0,0,0,1) 49.9%, rgba(255,255,255,1) 50%, rgba(0,0,0,1) 5.1%, rgba(0,0,0,1) 100%);
 }
+.HorizontalDebugBGFaded {
+    background: rgb(2,0,36);
+    background: linear-gradient(0deg, rgba(2,0,36,0.5) 0%, rgba(1,106,146,0.5) 48%, rgba(1,108,148,0.75) 50%, rgba(1,112,152,0.5) 52%, rgba(0,212,255,0.5) 100%);
+}
 
